--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,6 +15,8 @@ services:
       - ./backend/.env.development.local
     depends_on:
       - mongo
+    volumes:
+      - ./backend/logs:/app/logs
 
   frontend:
     build: ./frontend
