--- a/backend/package.json
+++ b/backend/package.json
@@ -26,7 +26,8 @@
     "mongoose": "^8.18.2",
     "morgan": "^1.10.1",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "winston": "^3.18.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
