--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,8 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
+    "@arcjet/inspect": "^1.0.0-beta.12",
+    "@arcjet/node": "^1.0.0-beta.12",
     "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "~1.4.4",
