--- a/backend/package.json
+++ b/backend/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write .",
-    "format:check": "prettier --check ."
+    "format:check": "prettier --check .",
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest"
   },
   "dependencies": {
     "@arcjet/inspect": "^1.0.0-beta.12",
@@ -33,8 +34,11 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "cross-env": "^10.1.0",
     "eslint": "^9.36.0",
     "globals": "^16.4.0",
-    "nodemon": "^3.1.10"
+    "jest": "^30.2.0",
+    "nodemon": "^3.1.10",
+    "supertest": "^7.1.4"
   }
 }
