--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,4 +36,4 @@ jobs:
         run: npm run format
 
       - name: Run tests with coverage
-        run: npm run test:coverage
+        run: npm run test
