--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,3 +37,5 @@ jobs:
 
       - name: Run tests with coverage
         run: npm run test
+        env:
+          DB_URI: mongodb://localhost:27017/primetrade_test
