--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,4 +38,4 @@ jobs:
       - name: Run tests with coverage
         run: npm run test
         env:
-          DB_URI: mongodb://localhost:27017/primetrade_test
+          DB_URI: ${{ secrets.TEST_DB_URI }}
