--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,7 @@
     "lint:fix": "eslint . --fix",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --coverage"
+    "test": "cross-env NODE_ENV=test DOTENV_CONFIG_PATH=.env.test NODE_OPTIONS=--experimental-vm-modules jest --coverage"
   },
   "dependencies": {
     "@arcjet/inspect": "^1.0.0-beta.12",
@@ -20,7 +20,6 @@
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
-    "dotenv": "^17.2.2",
     "express": "^4.21.2",
     "express-session": "^1.18.2",
     "helmet": "^8.1.0",
@@ -35,6 +34,7 @@
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "cross-env": "^10.1.0",
+    "dotenv": "^17.2.3",
     "eslint": "^9.36.0",
     "globals": "^16.4.0",
     "jest": "^30.2.0",
