--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,3 +39,4 @@ jobs:
         run: npm run test
         env:
           DB_URI: ${{ secrets.TEST_DB_URI }}
+          JWT_SECRET: ${{ secrets.JWT_SECRET }}
