--- a/frontend/.dockerignore
+++ b/frontend/.dockerignore
@@ -1,9 +1,21 @@
-node_modules
-.env
-npm-debug.log
-Dockerfile
-docker-compose.yml
-README.md
+# Dependencies and build artifacts
+node_modules/
 build/
-__tests__/
+dist/
+.next/
 coverage/
+
+# Logs and debug
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Secrets
+.env
+.env.*.local
+
+# Editor/OS clutter
+.DS_Store
+.vscode/
+.idea/
