--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,23 +1,30 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Dependencies
+node_modules/
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+# Build output
+build/
+dist/
+.next/
 
-# testing
-/coverage
-
-# production
-/build
-
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
+# Logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Coverage
+coverage/
+.nyc_output/
+
+# Env files
+.env
+.env.*.local
+
+# Editor/OS clutter
+.DS_Store
+.vscode/
+.idea/
+
+# Lockfiles (optional)
+package-lock.json
+yarn.lock
