--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,7 +24,7 @@ services:
     ports:
       - "3001:3001"
     env_file:
-      - ./frontend/.env.local
+      - ./frontend/.env.development.local
     depends_on:
       - backend
 
