--- a/k8s/backend/deployment.yaml
+++ b/k8s/backend/deployment.yaml
@@ -18,15 +18,15 @@ spec:
           ports:
             - containerPort: 3000
           env:
-            - name: DB_URI
+            - name: TEST_DB_URI
               valueFrom:
                 secretKeyRef:
-                  name: backend-secrets
-                  key: DB_URI
+                  name: backend-secret
+                  key: TEST_DB_URI
             - name: JWT_SECRET
               valueFrom:
                 secretKeyRef:
-                  name: backend-secrets
+                  name: backend-secret
                   key: JWT_SECRET
             - name: JWT_EXPIRES_IN
               value: "1d"
